--- a/Colony Wars/src/View/Tutorials.form
+++ b/Colony Wars/src/View/Tutorials.form
@@ -3,13 +3,13 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[400, 750]"/>
+      <Dimension value="[400, 1000]"/>
     </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[400, 750]"/>
+      <Dimension value="[400, 1000]"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[400, 750]"/>
+      <Dimension value="[400, 1000]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -70,8 +70,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-              <Component id="jLabel13" min="-2" pref="95" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+              <Component id="jLabel13" min="-2" pref="712" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -101,7 +101,7 @@
                   <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel12" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="28" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -242,7 +242,7 @@
     <Component class="javax.swing.JLabel" name="jLabel13">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="&quot;&lt;html&gt;Colony Wars has two game modes&lt;BR&gt;Skirmish Game Mode: You just play to have fun&lt;BR&gt;Campagin Game Mode: You try to achieve the objectives&lt;/html&gt;&quot;" type="code"/>
+          <Connection code="&quot;&lt;html&gt;Colony Wars is a time based strategy game that requires usage of a considerable&lt;/BR&gt;&quot;&#xa;+ &quot;amount of strategical thinking. Game map basically consists of 2 main bases for each player&lt;/BR&gt;&quot;&#xa;+ &quot;and several neutral bases that both players seeking to possess. The main purpose in the game&lt;/BR&gt;&quot;&#xa;+ &quot;is to get control of all the bases in the game. Every base produces number of soldiers by time&lt;/BR&gt;&quot;&#xa;+ &quot;passing. In order to get control of a base you need to have required amount of soldiers in it if&lt;/BR&gt;&quot;&#xa;+ &quot;it is a neutral base, if it is an enemy base though you need to send more soldiers than enemy&lt;/BR&gt;&quot;&#xa;+ &quot;soldiers that currently present in that base. There are several games similar to Colony Wars&lt;/BR&gt;&quot;&#xa;+ &quot;currently on market to the writer&#x2019;s knowledge that are popular one of them being Mushroom&lt;/BR&gt;&quot;&#xa;+ &quot;Wars. The game also has variations of three nations each having advantage in one or more&lt;/BR&gt;&quot;&#xa;+ &quot;of the soldier traits which are speed, production rate and soldier damage. First nation called&lt;/BR&gt;&quot;&#xa;+ &quot;Cult has a greater speed and damage compared to other nations thanks to it greatly developed&lt;/BR&gt;&quot;&#xa;+ &quot;weapons and clothing although the production rate of their species are low. Another nation in&lt;/BR&gt;&quot;&#xa;+ &quot;the game is called Azad having faster production rates and movement speed compared to&lt;/BR&gt;&quot;&#xa;+ &quot;others. They have smaller body sizes and are less developed which makes them fast and &lt;/BR&gt;&quot;&#xa;+ &quot;increases their reproduction rates since less developed species produce more often. However&lt;/BR&gt;&quot;&#xa;+ &quot;they have the drawback of having less damage than other species because of their small body&lt;/BR&gt;&quot;&#xa;+ &quot;sizes. The last nation in the game is called Doth which is a male dominant colony with males&lt;/BR&gt;&quot;&#xa;+ &quot;having more than one wife and are stronger compared to other species. However the nation is&lt;/BR&gt;&quot;&#xa;+ &quot;considerably behind in sciences and technologies which come with the drawback to their&lt;/BR&gt;&quot;&#xa;+ &quot;soldiers being slow compared to others.&lt;/BR&gt;&quot;&#xa;+ &quot;The game will also have a campaign mode which includes a series of games all&lt;/BR&gt;&quot;&#xa;+ &quot;having different objectives. Some examples for these varying objectives are as following:&lt;/BR&gt;&quot;&#xa;+ &quot;- Capturing all bases.&lt;/BR&gt;&quot;&#xa;+ &quot;- Capturing a particular base.&lt;/BR&gt;&quot;&#xa;+ &quot;- Reaching a particular amount of soldiers.&quot;" type="code"/>
         </Property>
       </Properties>
     </Component>
